--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <html>
 	<head>
-		<link rel="shortcut icon" type="image/x-icon" href="PyCrystalography/Images/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="../PyCrystallography/Images/favicon.ico">
 	</head>
 </html>
