--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,11 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
+      <p float="middle">
+      <img src="PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="150" />
+      <img src="PyCrystallography/Images/Logo.png" width="650" />
+      </p>
+  
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
