--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="shortcut icon" type="image/png" href="../PyCrystallography/Images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/favicon.ico">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -32,6 +32,8 @@
       </p>
   
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="btn">Home</a>
+      <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="btn">Documentation</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
