--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
 
     <header class="page-header" role="banner">
       <p float="middle">
-      <img src="PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="150" />
-      <img src="PyCrystallography/Images/Logo.png" width="650" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="150" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" width="650" />
       </p>
   
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
