--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="shortcut icon" type="image/png" href="https://github.com/Shellywell123/PyCrystallography/blob/gh-pages/PyCrystallography/Images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
