--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -5,6 +5,14 @@
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
+    div.wrapper {
+    width:auto;
+    margin:0;
+  }
+
+  nav{
+    display: none;
+  }
     @content;
   }
 }
@@ -382,3 +390,4 @@ a {
   margin:0 auto;
   position:relative;
 }
+
