--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,18 +12,23 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="shortcut icon" type="image/png" href="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico">
 
   </head>
   <body>
 
       <header>
-        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <p float="middle">
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="150" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" width="650" />
+      </p>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
 
       <div id="banner">
         <span id="logo"></span>
-
+        <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="button fork">Home</a>
+        <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button fork">
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
