--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 
       <header>
         <p float="middle">
-      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="150" />
-      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" width="650" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="100" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" width="600" />
       </p>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
@@ -28,7 +28,7 @@
       <div id="banner">
         <span id="logo"></span>
         <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="button fork">Home</a>
-        <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button fork">
+        <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button fork">Documentation</a>
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
