--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
 
       <div id="banner">
         <span id="logo"></span>
-        <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="button fork">Home</a>
-        <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button fork">Documentation</a>
+        <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="button fork"><strong>Home</strong></a>
+        <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button fork"><strong>Documentation</strong></a>
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
