--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <span id="logo"></span>
         <a href="https://shellywell123.github.io/PyCrystallography/index.html" class="button">Home</a>
         <a href="https://shellywell123.github.io/PyCrystallography/docs/contents.html" class="button">Documentation</a>
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button">View On GitHub</a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
