--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -292,7 +292,7 @@ nav {
   top: 220px;
   left:50%;
   margin-left:-750px;
-  text-align: left;
+  text-align: right;
 
   ul {
     list-style: none;
