--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 
       <header>
        
-      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" width="100" />
-      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" width="600" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/face_normals_tetrakis-transparent.gif" height="40" />
+      <img src="https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/Logo.png" height="40" />
       
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
