--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -191,7 +191,7 @@ header {
   position: fixed;
   top: 115px;
   background: #54637a;
-  border: 1px solid #f0b500;
+  border: 1px solid #8AE655;
   box-shadow: 0px 1px 3px rgba(0,0,0,.25);
   border-radius: 0px 2px 2px 0px;
   padding-right: 0px;
@@ -201,7 +201,7 @@ header {
     background: linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
     border-radius: 2px;
     box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
-    background-color: #78808c;
+    background-color: #	8AE655;
     margin-left: 5px;
     padding: 10px 12px;
     margin-top: 6px;
