--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -185,7 +185,7 @@ header {
 #banner {
   z-index: 100;
   left:0;
-  right:100%;
+  widtht:100%;
   height: 50px;
   margin-right:0px;
   position: fixed;
