--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -187,7 +187,7 @@ header {
   left:0;
   right:50%;
   height: 50px;
-  margin-right:0;
+  margin-right:0px;
   position: fixed;
   top: 115px;
   background: #ffcc00;
