--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -186,9 +186,10 @@ header {
   z-index: 100;
   left:0;
   right:0;
+  width: 900px;
   height: 50px;
   margin-right:0px;
-  position: fixed;
+  position: absolute;
   top: 115px;
   background: #ffcc00;
   border: 1px solid #f0b500;
