--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -189,7 +189,7 @@ header {
   width: 1200px;
   height: 50px;
   margin-right:0px;
-  position: absolute;
+  position: fixed;
   top: 115px;
   background: #ffcc00;
   border: 1px solid #f0b500;
