--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -346,9 +346,9 @@ footer {
   width:230px;
   position: fixed;
   left:50%;
-  margin-left:-750px;
+  margin-left:750px;
   bottom:20px;
-  text-align: right;
+  text-align: left;
   line-height: 16px;
 }
 
