--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -199,7 +199,7 @@ header {
 
   .button {
     border: 1px solid #56cc4b;
-    background: linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
+    background: #35414f;
     border-radius: 2px;
     box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
     background-color: #35414f;
