--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -183,11 +183,8 @@ header {
 }
 
 #banner {
-  z-index: 100;
-  left:0;
-  right:0;
-  width: 1200px;
-  height: 50px;
+  width:820px;
+  padding: 30px 30px 50px 100px;
   margin-right:0px;
   position: fixed;
   top: 115px;
