--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -267,7 +267,7 @@ header {
     right:7px;
     top:7px;
     display: block;
-    background: url(../images/octocat-logo.svg);
+    background: url(https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico);
   }
 }
 
