--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -189,7 +189,7 @@ header {
   height: 50px;
   width: 970px;
   margin-right:0px;
-  position: fixed;
+  position:relative;
   top: 115px;
   background: #35414f;
   border: 1px solid #56cc4b;
