--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -138,7 +138,7 @@ hr {
   border: 0;
   outline: none;
   height: 11px;
-  background: transparent url('../images/hr.gif') center center repeat-x;
+  background: transparent url(https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico) center center repeat-x;
   margin: 0 0 20px;
 }
 
@@ -184,11 +184,11 @@ header {
 
 #banner {
   z-index: 100;
-  left:250px;
+  left:230px;
   right:0;
   height: 50px;
+  margin: 20px 0;
   width: 960px;
-  margin-right:0px;
   position: fixed;
   top: 115px;
   background: #35414f;
