--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -187,7 +187,7 @@ header {
   left:0;
   right:0;
   height: 50px;
-  margin: 0 0 230px 0;
+  margin-left: 230px;
   width: 1000px;
   position: fixed;
   top: 115px;
