--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -187,9 +187,9 @@ header {
   left:0;
   right:0;
   height: 50px;
-  margin-left: 230px;
   width: 1000px;
   position: fixed;
+  margin: auto;
   top: 115px;
   background: #35414f;
   border: 1px solid #56cc4b;
