--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -273,9 +273,10 @@ header {
 
 section {
   width:820px;
-  padding: 30px 30px 50px 100px;
-  margin: 20px 0;
+  padding: 30px 30px 30px 30px;
   margin-top: 190px;
+  margin-right: auto;
+  margin-left: auto;
   position:relative;
   background: #fbfbfb;
   border-radius: 3px;
