--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       </div><!-- end banner -->
 
     <div class="wrapper">
-      <nav>
+      <nav>Page Contents
         <ul></ul>
       </nav>
       <section>
