--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -476,11 +476,18 @@ footer {
     margin-top: 5px;
   }
 
-  #banner { display: none;}
-  header ul {
-    display:none;
+  #banner {
+    top: 80px;
+
+    .fork {
+      float: left;
+      display: inline-block;
+      margin-left: 0px;
+    position:fixed;
+    left:20px;
+
+      }
   }
-}
 
 @media print {
   body {
