--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
     <div class="wrapper">
       <nav>
-        <p><B><I>Page Contents: float="left"</I></B></p>
+        <p>Page Contents float="left"</p>
         <ul></ul>
       </nav>
       <section>
