--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
     <div class="wrapper">
       <nav>
-        <p float="left"><I>Page Contents</I></p>
+        <p float="left"> Page Contents </p>
         <ul></ul>
       </nav>
       <section>
