--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,7 @@
       </div><!-- end banner -->
 
     <div class="wrapper">
-      <nav>
-        <p float="left"> Page Contents </p>
+      <nav>Page Contents:
         <ul></ul>
       </nav>
       <section>
