--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
       </div><!-- end banner -->
 
     <div class="wrapper">
-      <nav>Page Contents:
+      <nav>
+        <p float="left"><I>Page Contents:<I/><p/>
         <ul></ul>
       </nav>
       <section>
