--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
     <div class="wrapper">
       <nav>
-        <p float="left"><I><B>Page Contents:    <B/><I/><p/>
+        <p float="left"><I><B>Page Contents:    </B></I></p>
         <ul></ul>
       </nav>
       <section>
