--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -483,7 +483,7 @@ footer {
       float: left;
       display: inline-block;
       margin-left: 0px;
-    position:fixed;
+    position:relative;
     left:20px;
 
       }
