--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -264,8 +264,8 @@ header {
     position:absolute;
     height: 32px;
     width: 32px;
-    right:11px;
-    top:11px;
+    right:auto;
+    top:auto;
     display: block;
     background: url(https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico);
   }
