fix banner logo pos

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -262,11 +262,10 @@ header {
 
   #logo {
     position:absolute;
-    float: right;
-    height: 32px;
-    width: 32px;
-    right:auto;
-    top:auto;
+    height: 36px;
+    width: 36px;
+    right:7px;
+    top:7px;
     display: block;
     background: url(https://shellywell123.github.io/PyCrystallography/PyCrystallography/Images/favicon.ico);
   }
